Forge 1.12.2 backport